# DragonHatchling

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  DECISION-LOG.md  MALIGNANCY-LENS.md  PROJECT-REVIEW-2026-07-12.md  RESEARCH-RULE-HYBRIDS.md  RESEARCH.md  SGP-ARCHITECTURE.md  SGP-RUNS.md  UMT-VIT-ARCHITECTURE.md  (+7 more)
experiments/umtvit/: pyproject.toml
experiments/umtvit/configs/: README.md  eurosat.yaml  ham10000.yaml  shapes.yaml
experiments/umtvit/notebooks/: README.md  _build_sgp_nb.py  kaggle_umtvit.ipynb  kaggle_umtvit_package.ipynb  kaggle_umtvit_sgp.ipynb  kaggle_umtvit_sgp_run2.ipynb
experiments/umtvit/tests/: conftest.py  test_ablation.py  test_config.py  test_configs_yaml.py  test_data.py  test_eval.py  test_losses.py  test_models.py  test_shapes.py  test_swap_proof.py  test_trainer.py  test_uplifting_som.py
experiments/umtvit/umtvit/: __init__.py  config.py
experiments/umtvit/umtvit/data/: __init__.py  augment.py  dataset.py  loaders.py  shapes.py  splits.py
experiments/umtvit/umtvit/engine/: __init__.py  ablation.py  trainer.py
experiments/umtvit/umtvit/eval/: __init__.py  features.py  knn.py  linear_probe.py  manifold.py  report.py  som_metrics.py  zaxis_probe.py
experiments/umtvit/umtvit/export/: __init__.py
experiments/umtvit/umtvit/losses/: __init__.py  _common.py  compose.py  geodesic.py  ntxent.py  ordering.py  smoothness.py
experiments/umtvit/umtvit/models/: __init__.py  backbone.py  cross_attention.py  encoder.py  fusion.py  heads.py  model.py  patch_embed.py  som3d.py  uplifting.py
(+193 files in other folders)
