[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hatchvision"
version = "0.1.0"
description = "Reusable PyTorch image-classification framework with pluggable backbones (incl. experimental Baby Dragon Hatchling), Hebbian feature memory, and IVGraph explainability export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
shap = ["shap>=0.44"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["hatchvision*"]
